# lulc_training_data_sampling_tool

./: README.md  interactive_sampling_tool  interactive_sampling_tool.py  requirements.txt  setup.cfg  streamlit_app.py
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
data/: KHG_points.dbf  KHG_points.shp  KHG_points.shx  KHG_sample2.dbf  KHG_sample2.shp  KHG_sample2.shx  Pedamaran_sample.dbf  Pedamaran_sample.qix  Pedamaran_sample.sbn  Pedamaran_sample.sbx  Pedamaran_sample.shp  Pedamaran_sample.shp.xml  Pedamaran_sample.shx  Pedamaran_sample2.dbf  Pedamaran_sample2.shp  Pedamaran_sample2.shx  Sample2.dbf  Sample2.sbn  Sample2.sbx  Sample2.shp  Sample2.shp.xml  Sample2.shx  aoi_pedam.dbf  aoi_pedam.shp  aoi_pedam.shp.xml  aoi_pedam.shx  lc_pedamaran.csv
