[metadata]
name = lulc-streamlit-app
version = 0.1.0
description = A Streamlit application for interactive LULC digitization.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/lulc-streamlit-app
license = MIT

[options]
packages = find:
install_requires =
    streamlit
    folium
    geopandas
    rasterio
    pandas
    shapely
    pillow
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    streamlit_app = streamlit_app:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --disable-warnings